--- a/pemesanan.html
+++ b/pemesanan.html
@@ -30,7 +30,7 @@
     </div>
 </header>
 <body>
-    <div class="container">
+    <div class="form">
         <h3>Form Booking</h3>
         <table>
             <tr>
