--- a/pemesanan.html
+++ b/pemesanan.html
@@ -25,7 +25,7 @@
             <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="service.html">SERVICE</a></li>
-            <li class="active"><a href="contact.html">CONTACT</a></li>
+            <li class="active"><a href="pemesanan.html">CONTACT</a></li>
         </ul>
     </div>
 </header>
