--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 				<li><a href="index.html">HOME</a></li>
 				<li class="active"><a href="about.html">ABOUT</a></li>
 				<li><a href="service.html">SERVICE</a></li>
-				<li><a href="pemesanan.html">CONTACT</a></li>
+				<li><a href="pemesanan.html">PEMESANAN</a></li>
 			</ul>
 		</div>
 	</header>
