--- a/karin.html
+++ b/karin.html
@@ -1,37 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Service</title>
-    <link rel="stylesheet" href="karin.css">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Kelompok1</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"><script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!--service-->
-<section class="service">
-    <div class="container">
-        <h3>SERVICE</h3>
-        <div class="box">
-            <div class="col-4">
-                <div class="icon"><i class="fa-solid fa-globe"></i></div>
-            <h4>MOBILE APP</h4>
-            </div>
-            <div class="col-4">
-                <div class="icon"><i class="fa-solid fa-globe"></i></div>
-            <h4>WEB DEVELOPMENT</h4>
-            </div>
-            <div class="col-4">
-                <div class="icon"><i class="fa-solid fa-pen-to-square"></i></div>
-            <h4>DESIGN</h4>
-            </div>
-            <div class="col-4">
-                <div class="icon"><i class="fa-regular fa-chart-column"></i></div>
-            <h4>DIGITAL MARKETING</h4>
-            </div>
-        </div>
-    </div>
-</section>
+
+	<div class="bg-loader">
+		<div class="loader"></div>
+	</div>
+	<div class="medsos">
+		<div class="container">
+			<ul>
+				<li><a href="#"><i class="fab fa-facebook"></i></a></li>
+				<li><a href="#"><i class="fab fa-instagram-square"></i></a></li>
+				<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+				<li><a href="#"><i class="fab fa-whatsapp"></i></i></a></li>
+			</ul>
+		</div>
+	</div>
+	<header>
+		<div class="container">
+			<h1><a href="index.html">Kelompok1</a></h1>
+			<ul>
+				<li><a href="index.html">HOME</a></li>
+				<li><a href="about.html">ABOUT</a></li>
+				<li class="active"><a href="service.html">SERVICE</a></li>
+				<li><a href="contact.html">PEMESANAN</a></li>
+			</ul>
+		</div>
+	</header>
+	
+	<section class="label">
+		<div class="container">
+			<p>Home / Service</p>
+		</div>
+	</section>
+	
+	<section class="service">
+		<div class="container">
+		<Img boarder="0" src="service.jpg" width="990" height="220">
+			<h3>SERVICE</h3>
+			<div class="box">
+				<div class="col-4">
+					<div class="icon"><i class="fas fa-mobile"></i></div>
+					<h4>MOBILE APP</h4>
+				</div>
+				<div class="col-4">
+					<div class="icon"><i class="fas fa-globe"></i></div>
+					<h4>WEB DEVELOPMENT</h4>
+				</div>
+				<div class="col-4">
+					<div class="icon"><i class="fas fa-edit"></i></div>
+					<h4>DESIGN</h4>
+				</div>
+				<div class="col-4">
+					<div class="icon"><i class="fas fa-chart-bar"></i></div>
+					<h4>DIGITAL MARKETING</h4>
+				</div>
+			</div>
+		</div>
+	</section>
+	
+	<footer>
+		<div class="container">
+			<small>Copyright &copy; 2023 - Kelompok1. All Rights Reserved.</small>
+		</div>
+	</footer>
+	
+	
+	<script type="text/javascript">
+		$(document).ready(function(){
+			$(".bg-loader").hide();
+		})
+	</script>
 </body>
 </html>
