--- a/sunil.html
+++ b/sunil.html
@@ -31,7 +31,7 @@
 				<li  class="active"><a href="index.html">HOME</a></li>
 				<li><a href="about.html">ABOUT</a></li>
 				<li><a href="service.html">SERVICE</a></li>
-				<li><a href="contact.html">CONTACT</a></li>
+				<li><a href="contact.html">PEMESANAN</a></li>
 			</ul>
 		</div>
 	</header>
